[gd_scene load_steps=18 format=3 uid="uid://byoi1xsr0flfl"]

[ext_resource type="Script" path="res://GameScene/GameScene.gd" id="1_f3738"]
[ext_resource type="Texture2D" uid="uid://bh37a154red3i" path="res://Assets/art/background/game/tree.svg" id="2_j8hty"]
[ext_resource type="Texture2D" uid="uid://ciihbexjkmiq8" path="res://Assets/art/background/game/lantern.svg" id="3_m70pv"]
[ext_resource type="Texture2D" uid="uid://cc7ppnjaksfsx" path="res://Assets/textures/rays.png" id="4_1qu6a"]
[ext_resource type="Texture2D" uid="uid://co1p05da5o0d4" path="res://Assets/art/background/game/fog.svg" id="5_fux34"]
[ext_resource type="Texture2D" uid="uid://doh64lgcym6qg" path="res://Assets/textures/circle.svg" id="6_e40rt"]

[sub_resource type="Animation" id="Animation_rpdgq"]
resource_name = "back_and_forth"
length = 30.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fog2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1150, -146), Vector2(1302, -146)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fog:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1263, 397), Vector2(-1073, 397)]
}

[sub_resource type="Animation" id="Animation_hd3x8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fog2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-888, -146)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fog:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1263, 397)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y73fh"]
_data = {
"RESET": SubResource("Animation_hd3x8"),
"back_and_forth": SubResource("Animation_rpdgq")
}

[sub_resource type="Animation" id="Animation_npxfq"]
resource_name = "swing"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lantern:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0349066, 0.0349066, 0.0]
}

[sub_resource type="Animation" id="Animation_jvhgd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lantern:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gir6g"]
_data = {
"RESET": SubResource("Animation_jvhgd"),
"swing": SubResource("Animation_npxfq")
}

[sub_resource type="Gradient" id="Gradient_lfu81"]
offsets = PackedFloat32Array(0.00389105, 0.182879, 0.832685, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_r53h0"]
gradient = SubResource("Gradient_lfu81")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fr216"]
emission_shape = 3
emission_box_extents = Vector3(2000, 2000, 1)
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 10.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.05
scale_max = 0.1
color = Color(0.341176, 0.278431, 0.435294, 0.164706)
color_ramp = SubResource("GradientTexture1D_r53h0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vfxa"]
bg_color = Color(0.215686, 0.215686, 0.215686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4pmtw"]
bg_color = Color(0.592157, 0.219608, 0.72549, 1)

[node name="GameScene" type="Node2D"]
script = ExtResource("1_f3738")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundFill" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.12549, 0.192157, 1)

[node name="Tree" type="Sprite2D" parent="."]
position = Vector2(703, 277)
scale = Vector2(1.69, 1.93836)
texture = ExtResource("2_j8hty")

[node name="Fog2" type="Sprite2D" parent="."]
modulate = Color(0.658824, 0.533333, 0.956863, 0.0392157)
position = Vector2(-888, -146)
scale = Vector2(1.00547, 0.639785)
texture = ExtResource("5_fux34")

[node name="Tree2" type="Sprite2D" parent="."]
position = Vector2(548, -214)
scale = Vector2(1.69, 1.93836)
texture = ExtResource("2_j8hty")

[node name="Tree3" type="Sprite2D" parent="."]
position = Vector2(-65.0001, -439)
scale = Vector2(1.69, 1.93836)
texture = ExtResource("2_j8hty")

[node name="Fog" type="Sprite2D" parent="."]
modulate = Color(0.658824, 0.533333, 0.956863, 0.0392157)
position = Vector2(1263, 397)
scale = Vector2(0.667679, 0.61828)
texture = ExtResource("5_fux34")

[node name="FogAnimator" type="AnimationPlayer" parent="."]
autoplay = "back_and_forth"
libraries = {
"": SubResource("AnimationLibrary_y73fh")
}

[node name="Tree4" type="Sprite2D" parent="."]
position = Vector2(-436, 147)
scale = Vector2(1.69, 1.93836)
texture = ExtResource("2_j8hty")

[node name="Lantern" type="Sprite2D" parent="Tree4"]
show_behind_parent = true
position = Vector2(98.2249, -23.2155)
scale = Vector2(0.330664, 0.287043)
texture = ExtResource("3_m70pv")
offset = Vector2(0, 132)

[node name="Sprite2D" type="Sprite2D" parent="Tree4/Lantern"]
self_modulate = Color(1, 1, 1, 0.0235294)
position = Vector2(1.78943, 221.068)
scale = Vector2(0.281694, 0.263226)
texture = ExtResource("4_1qu6a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tree4"]
autoplay = "swing"
libraries = {
"": SubResource("AnimationLibrary_gir6g")
}

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 150
process_material = SubResource("ParticleProcessMaterial_fr216")
texture = ExtResource("6_e40rt")
lifetime = 4.0
preprocess = 4.0

[node name="BoardBackground2" type="ColorRect" parent="."]
offset_left = -43.0
offset_top = -33.0
offset_right = 326.0
offset_bottom = 328.0
color = Color(0.184314, 0.141176, 0.25098, 1)

[node name="BoardBackground" type="ColorRect" parent="."]
offset_left = -33.0
offset_top = -33.0
offset_right = 317.0
offset_bottom = 317.0
color = Color(0.211765, 0.168627, 0.278431, 1)

[node name="GameBoard" type="Node2D" parent="." groups=["gameboard"]]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="BossOverlay" type="MarginContainer" parent="HUD"]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 104.0
grow_horizontal = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40

[node name="Container" type="VBoxContainer" parent="HUD/BossOverlay"]
layout_mode = 2
size_flags_vertical = 0

[node name="HealthBar" type="ProgressBar" parent="HUD/BossOverlay/Container"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_5vfxa")
theme_override_styles/fill = SubResource("StyleBoxFlat_4pmtw")
value = 100.0
show_percentage = false

[node name="Title" type="RichTextLabel" parent="HUD/BossOverlay/Container"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[shake]BOSS NAME"
scroll_active = false

[node name="Menus" type="CanvasLayer" parent="."]

[node name="VictoryPanel" type="Panel" parent="Menus"]
process_mode = 3
visible = false
self_modulate = Color(0.360784, 0.34902, 0.364706, 0.611765)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.5
offset_top = -188.5
offset_right = 169.5
offset_bottom = 188.5
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="VBoxContainer" parent="Menus/VictoryPanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 14.0
offset_right = 325.0
offset_bottom = 519.0

[node name="Title" type="RichTextLabel" parent="Menus/VictoryPanel/Container"]
custom_minimum_size = Vector2(221, 30)
layout_mode = 2
bbcode_enabled = true
text = "[center][wave]VICTORY"

[node name="Message" type="RichTextLabel" parent="Menus/VictoryPanel/Container"]
custom_minimum_size = Vector2(221, 250)
layout_mode = 2
bbcode_enabled = true
text = "Thank you so much for playing.

The full game will not end here... it'll have more bosses, more weapons, and hopefully, more fun.

[rainbow][wave]please for the love of all that is holy, help us out and complete this survey 
[/wave][/rainbow]
[center]*INSERT SURVEY HERE*"

[node name="WishlistText" type="RichTextLabel" parent="Menus/VictoryPanel/Container"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
bbcode_enabled = true
text = "[color=red][shake][center]WISHLIST ON STEAM"

[node name="MainMenuButton" type="Button" parent="Menus/VictoryPanel/Container"]
layout_mode = 2
text = "Main Menu"

[node name="GameOver" type="VBoxContainer" parent="Menus"]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -273.5
offset_right = 93.0
offset_bottom = 273.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="RichTextLabel" parent="Menus/GameOver"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]Game Over![/center]"
scroll_active = false

[node name="Restart" type="Button" parent="Menus/GameOver"]
layout_mode = 2
text = "Try Again"

[node name="MainMenuButton" type="Button" parent="Menus/GameOver"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="Menus/VictoryPanel/Container/MainMenuButton" to="." method="_on_VictoryMainMenuButton_pressed"]
[connection signal="pressed" from="Menus/GameOver/Restart" to="." method="_on_GameOverRestartButton_pressed"]
[connection signal="pressed" from="Menus/GameOver/MainMenuButton" to="." method="_on_GameOverMainMenuButton_pressed"]
